--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
@@ -69,6 +73,31 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>4.5.0</version>
+                <configuration>
+                    <propertyFile>src/main/resources/liquibase.properties</propertyFile>
+                    <changeLogFile>src/main/resources/db/db.changelog-master.yaml</changeLogFile>
+                    <outputChangeLogFile>src/main/resources/db/changelog/entity-changelog.sql</outputChangeLogFile>
+                    <diffChangeLogFile>src/main/resources/db/changelog/db.changelog-diff.sql</diffChangeLogFile>
+                    <referenceUrl>
+                        hibernate:spring:ch.selise.todo.entity.model?dialect=org.hibernate.dialect.H2Dialect
+                    </referenceUrl>
+                    <referenceDriver>org.h2.Driver.Driver</referenceDriver>
+                    <referenceUrl>jdbc:h2:mem:todo</referenceUrl>
+                    <!--                    <referenceUsername>sa</referenceUsername>-->
+                    <!--                    <referencePassword></referencePassword>-->
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.h2database</groupId>
+                        <artifactId>h2</artifactId>
+                        <version>2.2.220</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
