--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8080
-
 logging.level.web=debug
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -7,7 +6,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
-
 #DataSource Configuration
 spring.datasource.url=jdbc:h2:mem:todo;
 spring.datasource.driverClassName=org.h2.Driver
@@ -16,7 +14,14 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-ui
-
+#
+#
+spring.liquibase.change-log=classpath:/db/db.changelog-master.yaml
+spring.liquibase.enabled=true
+spring.liquibase.clear-checksums=true
+spring.liquibase.dropFirst=false
+#
+#
 springdoc.swagger-ui.path=/swagger
 springdoc.api-docs.path=/api-docs
 
